magnetic dance proposal 50%

--- a/00BasicGreek/body.tex
+++ b/00BasicGreek/body.tex
@@ -1,31 +1,20 @@
 \noindent
-\section{00:00 start: cauche glissando (no fx)}
-\label{sec:orgecc5edc}
-\section{00:20 fade in MagClip on cauche glissando: z1->thresh}
-\label{sec:org3e60f6a}
-\section{00:50 cauche2 glissando + BinShift (low, static)}
-\label{sec:org301fcdb}
-\section{ca 01:30 start togia (live viola) + BinShift, x1>stretch, y1>shift}
-\label{sec:org7f96b3d}
-\section{ca 02:00 cauche2: BinShift: add x1>stretch, y1>shift}
-\label{sec:orgb908b57}
-\section{04:00 cauche start of piece. (no fx)}
-\label{sec:orgd34036d}
-\section{ca 04:10 togia  start of piece. (no fx)}
-\label{sec:orga1cb33a}
-\section{4:30 cauche + magabove (thresh: line 0->0.7 30'')}
-\label{sec:org2775152}
-\section{5:30 togia + magabove (thresh: line 0->0.7 30'')}
-\label{sec:org2900fb0}
-\section{6:00 cauche + magabove (z1>thresh)}
-\label{sec:org7a20cac}
-\section{6:30 togia + magabove (z1>thresh)}
-\label{sec:orgb070000}
-\section{7:00 cauche + togia: heartbeat + LocalMax (thresh: line 0->0.7 30'')}
-\label{sec:org8a1618c}
-\section{7:30 cauche2: scratch + BinShift (x1>stretch, y1>shift)}
-\label{sec:orge3f9b78}
-\section{8:00 togia (scratch) + BinShift (x1>stretch, y1>shift)}
-\label{sec:org3e132f2}
-\section{9:00 quiet end of piece (+MagClip)}
-\label{sec:orgfb8c4f1}
+\begin{ganttchart}[bar/.append style={fill=green!30}, y unit chart=0.7cm, 
+   title height=0.7, hgrid=true, vgrid={*{3}{blue, dashed}, *1{red}}]{1}{24}
+        \gantttitle{ΕΡΜΗΣ: Xρονοδιάγραμμα Πακέτων Εργασίας και Παραδοτέων}{24} \\
+        \gantttitlelist{1,...,24}{1} \\
+        \ganttbar{ΕΕ 1. Εγκατάσταση Εξοπλισμού}{1}{6} \\
+        \ganttmilestone{Λειτουργικό Εργαστήριο}{6} \\ 
+        \ganttbar{ΕΕ 2. Circuit Bending}{7}{13} \\
+        \ganttmilestone{Έκθεση Συσκευών}{13} \\ 
+        \ganttbar{ΕΕ 3. Κατασκευή Ηλεκτρονικών}{13}{17} \\
+        \ganttmilestone{Ηλεκτρονικά Συστήματα}{17} \\
+        \ganttbar{ΕΕ 4. Διαδραστικά Συστήματα}{17}{21} \\
+        \ganttmilestone{Διαδραστικά Συστήματα}{21} \\
+        \ganttbar{ΕΕ 5. Διαδραστικές Εφαρμογές}{21}{24} \\
+        \ganttmilestone{Διαδραστικές Εφαρμογές}{24} \\
+        \ganttbar{ΕΕ 6. Εκπαιδευτικό Υλικό}{5}{24} \\
+        \ganttmilestone{Ιστοχώρος Έργου}{22} \\
+        \ganttbar{ΕΕ 7. Διάχυση Αποτελεσμάτων}{18}{24} \\
+        \ganttmilestone{Σεμινάριο/Ημερίδα}{24} \\
+\end{ganttchart}
