--- a/02ProjectReport/body.tex
+++ b/02ProjectReport/body.tex
@@ -1,9 +1,105 @@
 \noindent
-\section{Κεφάλαιο 1}
-\label{sec:org11a830b}
+“Magnetic Dance”
+Εκδηλώσεις Ψηφιακών και Τηλεματικών Τεχνών 
 
-Τεστ.
-\section{Κεφάλαιο 2}
-\label{sec:orgb5186f1}
+Πρόταση Έργου προς την 
+Ελευσίνα Πολιτιστική Πρωτεύουσα της Ευρώπης 2021
 
-Τεσετ επισισ
+Ιωάννης Ζάννος, 20. 8. 2019
+
+\section{Α. Σύντομη περιγραφή}
+\label{sec:org4b1a471}
+Προτείνουμε μια εκδήλωση ψηφιακών τεχνών πάνω στην ιδέα της ενσωμάτωσης (embodiment) και της τηλεπαρουσίας σαν τεχνολογικά φαινόμενα του διαδικτύου, και τις επιπτώσεις τους στον πολιτισμό και το περιβάλλον. Η εκδήλωση στηρίζεται σε τεχνολογίες που συνδυάζει και αναπτύσσει το έργο για την υποστήριξη της τηλεπαρουσίας και της ενσωμάτωσης με εναλλακτικά μέσα βασιζόμενα σε ανοιχτές τεχνολογίες, φιλικά στο περιβάλλον ενεργειακά και στην κοινωνία πολιτισμικά.  Συνδυάζει αριθμό επιμέρους εκδηλώσεων με διεθνείς συνεργασίες καλλιτεχνών μέσα από τις οποίες καθιερώνει θεματικούς συνδέσμους ανάμεσα στην πολιτιστική σημασία της Αρχαίας Ελευσίνας σαν τόπο τέλεσης των Ελευσινίων Μυστηρίων και τις πρακτικές επιτέλεσης στις σημερινές κοινωνίες του διαδικτύου των ψηφιακών τεχνών και του ανοικτού κώδικα.  Προσεγγίζει τις πολιτισμικές διαστάσεις πρακτικών διαμοιρασμού τεχνολογίας μέσα από το πρίσμα επιτελεστικών πρακτικών καλλιτεχνικής έκφρασης. 
+ Μια αντιπροσωπευτική, άμεσα αναγνωρίσιμη θεματική διασύνδεση με την Ελευσίνα δίνεται με το κέντρικό έργο του πρότζεκτ “Izutsu – Ηχώ”, που συνδυάζει θεματικό υλικό από έργα της Ρωμαϊκής Ποίησης Ελληνιστικής Εποχής (Μεταμορφώσεις του Οβιδίου) και του Ιαπωνικού Θεάτρου (Θέατρο Νό Ιzutsu), που αναφέρονται στην ζωή στην ύπαιθρο και επεξεργαζονται την θεματολογία της σχέσης του ανθρώπου με την φύση μέσα από διαδικασίες μεταμόρφωσης και μεταβατικότητας. Το έργο αυτό αποτελεί κεντρικό πυρήνα για το σύνολο εκδηλώσεων με τη συμμετοχή ελλήνων και ξένων καλλιτεχνών. Ιδιαίτερος χαρακτηριστικός στόχος του έργου είναι η συμμετοχή καλλιτεχνών μέσω διαδικτυακής τηλεπαρουσίας, με νέες τεχνολογίες επικοινωνίας που βασίζονται στην χρήση ανοιχτού κώδικα και δεδομένων, σε αντιπαράθεση προς καθιερωμένες και κυρίως εμπορικές τεχνολογίας αναμετάδοσης ήχου και βίντεο. Το περιβαλλοντικό, οικολογικό και πολιτισμικό σκέλος της εκδήλωσης συμπληρώνεται με εκδηλώσεις περιπατητικής γεωτοποθετημένης τέχνης και με συζήτηση στρογγυλής τραπέζης με την συμμετοχή διακεκριμένων καλλιτεχνών και διανοουμένων μέ έργο σχετικό προς την θεματική της πρότασης.  
+
+Προτείνονται οι εξής εκδηλώσεις:
+
+\begin{enumerate}
+\item Χορευτική παράσταση με συγχρονη συνεργασία και εκτέλεση σε διαφορετικές πόλεις/χώρες (Ελλάδα, Γερμανία, Ιαπωνία, και άλλες χώρες), με θέμα την αφήγηση “Izutsu – Δάφνις – Ηχώ” (βλ. Πλάνο υλοποίησης) και παρουσίαση των κεντρικών τεχνικών τηλεπαρουσίας και ενσωμάτωσης με την ψηφιακή σύνθεση του ακουστικού και οπτικού μέρους του θεάματος από δεδομένα κίνησης των χορευτών. Τα δεδομένα μετρώνται φορετούς ασύρματους αισθητήρες ανοιχτής τεχνολογίας. Οι τεχνολογίες μετάδοσης καθώς και ψηφιακής σύνθεσης ήχου και εικόνας είναι επίσης ανοιχτού κώδικα και αποτελούν διαδεδομένα μέσα καλλιτεχνικής έκφρασης.
+
+\item Συναυλία με συμμετοχή ελλήνων και ξένων καλλιτεχνών ψηφιακών τεχνών, με χρήση εργαλείων ανοιχτού κώδικα, και συμμετοχή τόσο με επί τόπου παρουσία στην σκηνή της Ελευσίνας όσο και εξ αποστάσεως μέσω διαδικτύου.
+
+\item Περιπατητικά έργα: Διεξαγωγή ηχητικών τοπο-ειδικών (site specific) περιπάτων με τεχνικές γεω-τοποθέτησης (geo-location) με το λογισμικό Εchoes από την ομάδα Akoo.o.  καθώς και με άλλες πλατφόρμες με την συμβολή ξένων καλλιτεχνών από Ιαπωνία, Ισπανία και Ηνωμένο Βασίλειο.  Oι περίπατοι αυτοί είναι ανοιχτοί στο κοινό και η θεματολογία τους αφορά στην ενσωμάτωση και διασύνδεση αφηγήσεων από την τοπική κοινότητα με τη μορφή περιπατητικών ηχητικών συνθέσεων. Στόχος του έργου είναι η ένταξη του πολιτισμικού παρόντος της Ελευσίνας και η σύνδεσή του με το παρελθόν, υπό τη μορφή μιας τεχνολογικής περιπατητικής επιτέλεσης στον δημόσιο χώρο.
+
+\item Στρογγυλή τράπεζα συζήτησης με καλλιτέχνες και διανοούμενους για τις πολιτιστικές διαστάσεις της ενσωμάτωσης και της ανοιχτής τεχνολογίας σε έναν κόσμο που αντιμετωπίζει οικολογική και πολιτισμική κρίση.
+\end{enumerate}
+
+\section{Β. Κύριοι παράγοντες, μέλη της ομάδας}
+\label{sec:org30795c7}
+
+\begin{itemize}
+\item Υπεύθυνος Έργου, συντονιστής και κυρίως καλλιτέχνης στο έργο “Izutsu – Ηχώ”, προγραμματισμός ήχου και διαδικτυακής επικοινωνίας: Γιάννης Ζάννος.
+\item Διαχείριση Έργου, Παραγωγή περιπατητικών έργων: Ερευνητικό Κέντρο ΤΟ ΑΕSTHATE O.E. Διευθύντρια: Δήμητρα Παπαχρήστου.
+\item Χορευτική Ομάδα: Jun Takahashi, Asayo Hisai (Ιαπωνία), Αναστάσιος Παππάς-Πετρίδης, Μαίρη Ράντου.
+\item Ομάδα διεξαγωγής περιπατητικών έργων: Ντάνα Παπαχρήστου, Γιώργος Σαμαντάς, Νίκος Μπουμπάρης, Σοφία Γρηγοριάδου, Yasmin Al Hadithi (Ομάδα Αkoo.o).
+\item Γραφικά: Αλεξάνδρα Χαραλαμπίδη, Βίκυ Μπισμπίκη.
+\item Τεχνική Υποστήριξη: Νίκος Χαραλαμπίδης (Ελλάδα), Alexander Reeder (Ιαπωνία)
+\end{itemize}
+
+\section{Γ. Συνεργασίες}
+\label{sec:org894b729}
+
+\subsection{Τηλεματικές Παραστάσεις Χορού "IE Fantasy"}
+\label{sec:org5587ea9}
+
+Για τις τηλεματικές παραστάσεις χορού πρόθεση συνεργασίας έχουν δηλώσει το ZKM (Zentrum fuer Kunst und Medientechnologie) της Καρλσρούης, το Θέατρο Theaterhaus Berlin Mitte, και ομάδα καλλιτεχνών σε συνεργασία με το Clipa Theater του Tel Aviv. 
+
+\subsection{Μουσική Παράσταση ζωντανού κώδικα (live coding) και Algorave (Algorithmic Rave)}
+\label{sec:orga411434}
+Για τις τηλεματικές παραστάσεις μουσικής με ζωντανό κώδικα (live coding) έχουν δηλώσει πρόθεση συνεργασίας οι Alex McLean (δημιουργός του Tidal Cycles και κεντρικός διοργανωτής των Algorave και μέλος της ομάδας Penelope Hypothesis Project), Mynah Marie, live coder στο Ισραήλ, Eldad Tsabary (δημιουργός του Estuary browser based live coding environment, καθηγητής στο Πανεπιστήμιο Concordia του Μονρεάλ). 
+
+\subsection{Περιπατητικές εκδηλώσεις και συζήτηση στρογγυλής τράπεζας}
+\label{sec:orgcf8e3bd}
+Για τις περιπατητικές εκδηλώσεις και την συζήτηση στρογγυλής τράπεζας έχουν δηλώσει πρόθεση συμμετοχής οι Kiyoshi Furukawa (Καθηγητής Σύνθεσης και Τέχνης Νέων Μέσων στο Tokyo University of the Arts), Satoru Takaku (Καθηγητής Αισθητικής Συγχρόνων Τεχνών στο Nihon University του Τόκυο), και Ricardo Climent (Kαθηγητής Σύνθεσης στο Πανεπιστήμιο του Μάντσεστερ). 
+
+\section{Πλάνο Υλοποίησης}
+\label{sec:org70abd48}
+\subsection{Παράσταση Τηλεματικού Χορού, IE-Fantasy.}
+\label{sec:org8a4e4e9}
+\subsubsection{Ιδέα και γενική περιγραφή}
+\label{sec:orgeb5bd27}
+Σαν θέμα για την ιστορία της χορευτικής παράστασης επιλέχθηκε μια ιστορία αγάπης από την ιαπωνική συλλογή ποιμάτων "Ise Monogatari" (10ος αιώνας μχ) και η διασκευή της σε θεατρικό έργο Noh του 14 αιώνα, με όνομα Izutsu (\url{https://www.wikiwand.com/en/Izutsu}).  Στο έργο αυτό βρίσκουμε αναφορές για την εξέλιξη της συζυγικής αγάπης στην επαρχία και αναφορές στην φύση, καθώς θέματα που παραπέμπουν στο ποίημα "Ηχώ και Νάρκισσος" του Οβιδίου, μέρος συλλογής ποιημάτων που πραγματεύεται μεταμορφώσεις ανθρώπων ή μυθικών οντοτήτων σε οντότητες του φυσικού περιβάλλοντος. Το όνομα της παράστασης αναφέρεται στον συνδυασμό των τριών ιστοριών με το ακρωνύμιο “IE” (Izutsu – Echo, “IE Fantasy”. Στις ιστορίες του Izutsu και της Ηχούς η γυναίκα αποβάλλεται την ταυτότητά της σαν τελευταίο μέσο για να επιτύχει την ένωση με τον αγαπημένο της. Στο Izutsu το φάντασμα της συζύγου μεταμφιέζεται στον σύζυγο ώστε να τον ξαναδεί σαν αντανάκλαση του εαυτού της στο πηγάδι, ενώ στην Ηχώ η Ηχώς καταφεύγει στην αντανάκλαση της φωνής του ερωμένου της ώστε να παραμείνει ενωμένη μαζί του παρά την άρνησή του.
+
+Η χορευτική παράσταση IE Fantasy προσεγγίζει κυριολεκτικά το θέμα της ένωσης των πρωταγωνιστών εξ αποστάσεως. Οι χορευτές φιλοξενούνται σε ξεχωριστές σκηνές παράστασης σε διαφορετικές πόλεις του κόσμου, και επικοινωνουν μεταξύ τους με ήχους και γραφικά που παράγονται από τις κινήσεις τους.  Στην παράσταση οι χορευτές χρησιμοποιούν φορετούς αισθητήρες κίνησης για να στείλουν δεδομένα σε υπολογιστή που παράγει ήχο και εικόνα ανάλογα με τις κινήσεις τους.  Τα δεδομένα μεταδίδονται μέσω διαδικτύου στους διαφορετικούς τόπους της παράστασης.  Σε κάθε τόπο παράστασης, ο υπολογιστής που λαμβάνει τα δεδομένα αναπαράγει επι τόπου τους προγραμματισμένους ήχους και εικόνες.  Με αυτό τον τρόπο μπορούν να λαμβάνουν μέρος σε μια παράσταση χορευτές από απομακρυσμένες πόλεις συγχρόνως.  Οι κινήσεις τους γίνονται αντιληπτά έμμεσα από τους ήχους και τα γραφικά, αλλά το αποτέλεσμα είναι μια κοινή παράσταση.
+\subsubsection{Τεχνικές Προδιαγραφές, Προεργασία}
+\label{sec:org18d3cb2}
+
+Απαραίτητη προϋπόθεση για την διασύνδεση όλων των σκηνών που συμμετέχουν στην παράσταση είναι η ύπαρξη αξιόπιστης σύνδεσης στο διαδίκτυο, κατά προτίμηση ασύρματης. 
+Σε κάθε σκηνή πρέπει επίσης να υπάρχει ηχητικός εξοπλισμός και προβολέας εικόνας με διασύνδεση σε υπολογιστή.  Οι προδιαγραφές για την Ελευσίνα αναγράφονται στην προσφορά εταιρείας παραγωγής που παρατίθεται στην παρούσα πρόταση ως παράρτημα. 
+
+Οι παρασστάσεις βασίζονται εξ ολοκλήρου σε τεχνολογία ανοιχτού κώδικα.  Κατά το 2019 εκτελέστηκε σειρά δοκιμών υπό συνθήκες παράστασης για να διαπιστωθεί ότι τα μέσα αυτά είναι ικανά για να υλοποιηθεί το έργο.  Κατά την διάρκεια αυτών εντοπίσθηκαν αρχικές αδυναμίες και βρέθηκαν καλύτερες λύσεις που χρησιμοποιούνται στην τωρινή φάση του έργου.  Εν συντομία, οι τεχνολογίες είναι:
+
+\begin{itemize}
+\item Για την λήψη και ασύρματη μετάδοση δεδομένων κίνησης από τους χορευτές: Το σύστημα sensestage ()
+\item Για την διασύνδεση δεδομένων μέσω διαδικτύου: OSC Groups ()
+\item Για την επεξεργασία δεδομένων κίνηση και σύνθεση ήχου: SuperCollider ()
+\item Για την σύνθεση εικόνας: Hydra Editor () και openFrameworks ()
+\end{itemize}
+
+Τα παραπάνω λογισμικά εργάζονται σε φορητούς υπολογιστές με λογισμικό UNIX/Linux.  Το λογισμικό για την διασύνδεση διαδικτύου εγκαθίσταται σε υπολογιστή του Εργαστηρίου Παραστατικών Περιβαλλόντων στις Τέχνες του Ιονίου Πανεπιστημίου.  
+
+\subsubsection{Σχέδιο Παραγωγής}
+\label{sec:org1017cb0}
+
+\subsection{Ηχητικοί Περίπατοι}
+\label{sec:org37ec07f}
+
+\subsubsection{Σύντομη Περιγραφή}
+\label{sec:org0a2d9b5}
+Η ομάδα akoo.o θα υλοποιήσει μία σειρά ηχητικών περιπάτων με την βοήθεια εφαρμογής αναπαραγωγής ήχου με δυνατότητες γεωτοποθέτησης που λειτουργεί σε κινητές συσκευές. (Ηχητικός περίπατος είναι ένας περίπατος κατά τον οποίο ο περιπατητής μπορεί να ακούει ήχους από ηχοτοπία, αφηγήσεις, μουσικά έργα και άλλα ηχητικά στοιχεία.)  Οι ηχογραφήσεις των ηχητικών αρχείων θα γίνουν κατόπιν επιτόπιας έρευνας στην Ελευσίνα κατά τη διάρκεια του 2020 μετά από γνωριμία με τις τοπικές κοινότητες και εξοικείωση με το ηχοτοπίο της περιοχής. Μία ανθρωπολογική έρευνα με έμφαση στον ήχο θα δημιουργήσει μία εγγύτητα με το ηχητικό και κοινοτικό παρόν της Ελευσίνας. Το ηχητικό υλικό θα γίνει αντικείμενο επεξεργασίας ώστε να καταστεί ικανό να τοποθετηθεί στην πλατφόρμα του προγράμματος Echoes. Το πρόγραμμα Echoes είναι ένα ανοικτό ελεύθερο λογισμικό το οποίο επισυνάπτει ηχητικά αρχεία πάνω στον χάρτη μίας περιοχής. Όταν ο περιπατητής ανοίξει την ειδική ελεύθερη εφαρμογή από το κινητό του, τότε τα αρχεία που έχουν τοποθετηθεί εκεί από την ομάδα akoo.o μπορούν να ακουστούν μέσω της γεω-τοποθέτησης και της τεχνολογίας GPS του περιπατητή. Εκεί, καθώς θα περπατά στον δημόσιο χώρο της Ελευσίνας, θα μπορεί να ακούει ήχους από το ίδιο ή άλλο ηχοτοπίο, αφηγήσεις και ιστορίες από τους κατοίκους της περιοχής, ιστορικά στοιχεία και πληροφορίες της πολιτισμικής κληρονομιάς και ηχητικές μουσικές συνθέσεις, που θα πλαισώνουν καλλιτεχνικά την τοπο-ειδική περιπατητική εμπειρία. Η ομάδα akoo.o χρειάζεται συχνές επισκέψεις στην περιοχή ώστε να συνδεθεί με το πεδίο, για να παράξει μία ηχητική περιπατητική εθνογραφία της πόλης της Ελευσίνας. Παράλληλα, θα μελετήσει την ιστορία της περιοχής από την αρχαιότητα μέχρι σήμερα ώστε να βρει κοινούς τόπους και συνδέσεις με το παρόν και το μέλλον της πόλης. Τέλος, θα εντάξει τις ιστορίες και τις αφηγήσεις των κατοίκων μέσα σε ενα τεχνολογικό εγχείρημα συνδεσιμότητας.
+
+\subsubsection{Τεχνικές προδιαγραφές και κόστος παραγωγής}
+\label{sec:org80ec5fd}
+
+\begin{enumerate}
+\item Διαθεσιμότητα δικτύου δεδομένων για χρήση από κινητές συσκευές, με δυνατότητα γεωτοποθέτησης, τύπου γενικής χρήσης (πχ. Google Maps, Bing maps etc.).
+\item 10 κινητές κινητές τηλεφώνου ή tablets με λειτουργικό περιβάλλον Android.
+\item 10 ζεύγη ακουστικών για τις παραπάνω κινητές συσκευές
+\item Ειδική εφαρμογή για τους περιπάτους στην Ελευσίνα, κατασκευασμένη από την ομάδα Echoes, κόστους 500 ευρώ.
+\item Μεταφορικά για επιτόπια έρευνα στην Ελευσίνα
+\end{enumerate}
+
+\subsubsection{Μορφή παρουσίασης}
+\label{sec:orge8f1024}
+
+Οι ηχητικοί περίπατοι μπορούν να είναι διαθέσιμοι στο κοινό καθ’όλη τη διάρκεια των εκδηλώσεων (2 ημέρες ή και περισσότερες μέρες εαν υπάρχει ζήτηση από τους διοργανωτές), είτε ατομικά είτε σε μικρές ομάδες μεγέθους μέχρι 20 ατόμων περίπου υπό την καθοδήγηση μελών της ομάδας ηχητικών περιπάτων.  Οργανωμένες συναντήσεις και κοινοί περίπατοι μπορούν να οργανωθούν κατά βούληση.  Ο ρόλος της ομάδας καθοδήγησης είναι να δώσουν οδηγίες χρήσης στους συμμετέχοντες.  Το κοινό μπορεί να λάβει μέρος χρησιμοποιώντας τις κινητές συσκευές που παρέχονται από την παραγωγή (βλ. Τεχνικές προδιαγραφές ανωτέρω 2 και 3), ή με προσωπικές κινητές συσκευές με λειτουργικό Android. 
