--- a/02ProjectReport/frameworkmagneticdance2001.tex
+++ b/02ProjectReport/frameworkmagneticdance2001.tex
@@ -16,9 +16,9 @@
 \usepackage{fancyhdr}
 \usepackage{lastpage}
 \pagestyle{fancy}
-\rhead{ΕΡΜΗΣ (Τμήμα B1)}
-\lhead{Ιωάννης Ζάννος}
-\lfoot{Θεματική 1}
+\lhead{Eleusis 21}
+\rhead{Πρόταση Έργου: Magnetic Dance}
+\lfoot{Εκδηλώσεις Ψηφιακών και Τηλεματικών Τεχνών}
 \rfoot{\pageref{LastPage} σελίδες}
 
 \usepackage{tikz}
@@ -34,17 +34,17 @@
 %Title
 \title{
   \begin{Large}
-    \textbf{Πρόγραμμα ΕΛΙΔΕΚ: Κόμβοι Έρευνας, Καινοτομίας και Διάχυσης\\ }
+    \textbf{Eleusis21\\ }
     \vspace{0.5cm}
-    \textbf{Θεματική 1: Κόμβοι Έρευνας και Καινοτομίας στην Εκπαίδευση\\ }
+    \textbf{Ελευσίνα Πολιτιστική Πρωτεύουσα της Ευρώπης 2021\\ }
     \vspace{6.5cm}
-    \textbf{Πρόταση Έργου ``ΕΡΜΗΣ''\\}
+    \textbf{Πρόταση Έργου ``Magnetic Dance''\\}
     \vspace{0.5cm}
-    \textbf{``Εργαστήρι Μουσικών Ηλεκτρονικών Συστημάτων''\\}
+    \textbf{Εκδηλώσεις Ψηφιακών και Τηλεματικών Τεχνών\\}
     \vspace{3.0cm}
-    \textbf{Τμήμα Β1\\}
+    \textbf{\\}
     \vspace{5.0cm}
-    \textbf{Ε.Υ.: Ιωάννης Ζάννος}
+    \textbf{Ιωάννης Ζάννος}
   \end{Large}
 }
 
